Fixed CSS, aded Flexbox-Intro

--- a/css/box-model/box-model.html
+++ b/css/box-model/box-model.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="../../styles.css">
         <title>The Box Model</title>
     </head>
     <body>
@@ -32,7 +32,7 @@
             <dl>
                 <dt>Padding</dt>
                 <dd>Defines the space between the border of the box and the content.</dd>
-                <dt>Border</dt>>
+                <dt>Border</dt>
                 <dd>Defines the space between the border and the the margin.</dd>
                 <dt>Margin</dt>
                 <dd>Defines the space between the margin and adjacent margins of other boxes.</dd>
