--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
     </head>
     <body>
         <h1>Review Notes on The Odin Project Course</h1>
-        <a href="./html/html.html" class="link">HTML</a>
-        <br>
-        <a href="./css/css.html" class="link">CSS</a>
-        <br>
-        <a href="./flexbox/flexbox.html" class="link">Flexbox</a>
+        <ul class="hometopics">
+            <li>
+                <a href="./html/html.html" class="link">HTML</a>
+            </li>
+            <li>
+                <a href="./css/css.html" class="link">CSS</a>
+            </li>
+            <li>
+                <a href="./flexbox/flexbox.html" class="link">Flexbox</a>
+            </li>
+        </ul>
         <br>
      </body>                
 </html>
