--- a/css/cascade/cascade.html
+++ b/css/cascade/cascade.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>The Cascade</title>
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="../../styles.css">
     </head>
     <body>
         <h1>Cascade of CSS</h1>
