--- a/css/css.html
+++ b/css/css.html
@@ -3,15 +3,23 @@
     <head>
         <meta charset="UTF-8">
         <title>CSS</title>
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
-        <h1>Notes on CSS</h1>
+        <h1 class="cssh1">Notes on CSS</h1>
         <ol>
-            <li><a href="./intro-to-css/i-t-css.html">Intro to CSS</a></li>
-            <li><a href="./cascade/cascade.html">The Cascade</a></li>
-            <li><a href="./box-model/box-model.html">The Box Model</a></li>
-            <li><a href="./block-and-inline/b-i.html">Block and Inline</a></li>
+            <li>
+                <a href="./intro-to-css/i-t-css.html">Intro to CSS</a>
+            </li>
+            <li>
+                <a href="./cascade/cascade.html">The Cascade</a>
+            </li>
+            <li>
+                <a href="./box-model/box-model.html">The Box Model</a>
+            </li>
+            <li>
+                <a href="./block-and-inline/b-i.html">Block and Inline</a>
+            </li>
         </ol>
         <br>
         <a href="../index.html" target="_blank" rel="noopener noreferrer">Back to Homepage</a>
