--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -2,18 +2,27 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="../styles.css">
         <title>Introduction to Flexbox</title> 
     </head>
     <body>
-        <h1>
+        <h1 class="flexboxh1">
             Introduction to Flexbox
         </h1>
-        <br>
-        <p>
-            Be patient with yourself here.
-        </p>
-        <br>
+        <ul>
+            <li>
+                <a href="" target="_blank" rel="noopener noreferrer">Introduction to Flexbox</a>
+            </li>
+            <li>
+                <a href="" target="_blank" rel="noopener noreferrer">Growing and Shrinking</a>
+            </li>
+            <li>
+                <a href="" target="_blank" rel="noopener noreferrer">Axes</a>
+            </li>
+            <li>
+                <a href="" target="_blank" rel="noopener noreferrer">Alignment</a>
+            </li>
         <a href="../index.html" target="_blank" rel="noopener noreferrer">Back to Review Homepage</a>
     </body>
 </html>
+
