Fixed links from opening as new tabs

--- a/css/intro-to-css/i-t-css.html
+++ b/css/intro-to-css/i-t-css.html
@@ -252,8 +252,8 @@
             Once you begin to add more declarations, the HTML starts to get messy and difficult to navigate. If you want other elements to have the same declarations,
             then you'll have to write or copy those as well thus making it feel bloated. This method also overrides the other two methods so use it sparringly if never at all.
         </p>
-    <a href="../cascade/cascade.html">Next Lesson: The Cascade</a>
+    <a href="../cascade/cascade.html" target="_self" rel="noopener noreferrer">Next Lesson: The Cascade</a>
     <br>
-    <a href="../css.html">Back to CSS</a>
+    <a href="../css.html" target="_self" rel="noopener noreferrer">Back to CSS</a>
     </body>
 </html>
