--- a/html/links-and-images/l-a-i.html
+++ b/html/links-and-images/l-a-i.html
@@ -34,8 +34,8 @@
     <p>Unfortunately the provided image is too large, so we can specify the image size with 'height=' and 'width='.</p>
     <img src="./images/towelienoidea.jpeg" alt="Towelie character, subtitled with 'I have no idea what is going on'" height="600" width="600">
     <br>
-    <a href="../../css/intro-to-css/i-t-css.html">Next Lesson: Intro to CSS</a>
+    <a href="../../css/intro-to-css/i-t-css.html" target="_self" rel="noopener noreferrer">Next Lesson: Intro to CSS</a>
     <br>
-    <a href="../html.html">Back to HTML</a>
+    <a href="../html.html" target="_self" rel="noopener noreferrer">Back to HTML</a>
 </body>
 </html>
