--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
         <h1>Review Notes on The Odin Project Course</h1>
         <ul class="hometopics">
             <li>
-                <a href="./html/html.html" class="link">HTML</a>
+                <a href="./html/html.html" class="link" target="_self" rel="noopener noreferrer">HTML</a>
             </li>
             <li>
-                <a href="./css/css.html" class="link">CSS</a>
+                <a href="./css/css.html" class="link" target="_self" rel="noopener noreferrer">CSS</a>
             </li>
             <li>
-                <a href="./flexbox/flexbox.html" class="link">Flexbox</a>
+                <a href="./flexbox/flexbox.html" class="link" target="_self" rel="noopener noreferrer">Flexbox</a>
             </li>
         </ul>
         <br>
