--- a/css/block-and-inline/b-i.html
+++ b/css/block-and-inline/b-i.html
@@ -31,7 +31,7 @@
             text content. For example:
         </p>
         <p>
-           Blah blah blah <a href="https://www.youtube.com/watch?v=dyMXYE_50Ts" target="_blank" rel="noopener noreferrer">blah blah blah</a> blah blah.
+           Blah blah blah <a href="https://www.youtube.com/watch?v=dyMXYE_50Ts" target="_self" rel="noopener noreferrer">blah blah blah</a> blah blah.
         </p>
         <br>
         <p>
@@ -64,8 +64,8 @@
             HTML elements for styling. This should only be used when no other semantic HTML element is appropriate.
         </p>
 
-        <a href="../">Next Lesson: </a>
+        <a href="../../flexbox/intro/i-t-f.html" target="_self" rel="noopener noreferrer">Next Lesson: Introduction to Flexbox</a>
         <br>
-        <a href="../css.html">Back to CSS</a>
+        <a href="../css.html" target="_self" rel="noopener noreferrer">Back to CSS</a>
     </body>
 </html>
