--- a/css/box-model/box-model.html
+++ b/css/box-model/box-model.html
@@ -41,7 +41,7 @@
         </p>
         <img src="./images/box-model.png" alt="Anatomy of the Box Model">
         <p>Watch the videos below and read the summaries.</p>
-        <h4><a href="https://www.youtube.com/watch?v=rIO5326FgPE" target="_blank" rel="noopener noreferrer">Learn CSS Box Model in 8 Minutes by Web Dev Simplified</a></h4>
+        <h4><a href="https://www.youtube.com/watch?v=rIO5326FgPE" target="_self" rel="noopener noreferrer">Learn CSS Box Model in 8 Minutes by Web Dev Simplified</a></h4>
         <p>
             <dl>Box Model Properties
                 <dt>"height:"</dt>
@@ -59,7 +59,7 @@
             </ul>
         </p>
         <br>
-        <h4><a href="https://www.youtube.com/watch?v=HdZHcFWcAd8" target="_blank" rel="noopener noreferrer">box-sizing: border-box (EASY!) by ByteGrad</a></h4>
+        <h4><a href="https://www.youtube.com/watch?v=HdZHcFWcAd8" target="_self" rel="noopener noreferrer">box-sizing: border-box (EASY!) by ByteGrad</a></h4>
         <p>
             <dl>Properties
                 <dt>"box-sizing: content-box"</dt>
@@ -222,8 +222,8 @@
             </p>
 
                                 
-        <a href="../block-and-inline/b-i.html">Next Lesson: Block and Inline</a>
+        <a href="../block-and-inline/b-i.html" target="_self" rel="noopener noreferrer">Next Lesson: Block and Inline</a>
         <br>
-        <a href="../css.html">Back to CSS</a>
+        <a href="../css.html" target="_self" rel="noopener noreferrer">Back to CSS</a>
     </body>
 </html>
