--- a/css/cascade/cascade.html
+++ b/css/cascade/cascade.html
@@ -239,8 +239,8 @@
             factor could determine which rule was more prioritized or more specific, the element gets applied with 
             a yellow colored font.
         </p>
-        <a href="../box-model/box-model.html">Next Lesson: The Box Model</a>
+        <a href="../box-model/box-model.html" target="_self" rel="noopener noreferrer">Next Lesson: The Box Model</a>
         <br>
-        <a href="../css.html">Back to CSS</a>
+        <a href="../css.html" target="_self" rel="noopener noreferrer">Back to CSS</a>
     </body>
 </html>
