--- a/css/css.html
+++ b/css/css.html
@@ -10,19 +10,19 @@
         <h1 class="cssh1">Notes on CSS</h1>
         <ol>
             <li>
-                <a href="./intro-to-css/i-t-css.html">Intro to CSS</a>
+                <a href="./intro-to-css/i-t-css.html" target="_self" rel="noopener noreferrer">Intro to CSS</a>
             </li>
             <li>
-                <a href="./cascade/cascade.html">The Cascade</a>
+                <a href="./cascade/cascade.html" target="_self" rel="noopener noreferrer">The Cascade</a>
             </li>
             <li>
-                <a href="./box-model/box-model.html">The Box Model</a>
+                <a href="./box-model/box-model.html" target="_self" rel="noopener noreferrer">The Box Model</a>
             </li>
             <li>
-                <a href="./block-and-inline/b-i.html">Block and Inline</a>
+                <a href="./block-and-inline/b-i.html" target="_self" rel="noopener noreferrer">Block and Inline</a>
             </li>
         </ol>
         <br>
-        <a href="../index.html" target="_blank" rel="noopener noreferrer">Back to Homepage</a>
+        <a href="../index.html" target="_self" rel="noopener noreferrer">Back to Homepage</a>
     </body>
 </html>
