--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -12,18 +12,18 @@
         </h1>
         <ul>
             <li>
-                <a href="" target="_blank" rel="noopener noreferrer">Introduction to Flexbox</a>
+                <a href="" target="_self" rel="noopener noreferrer">Introduction to Flexbox</a>
             </li>
             <li>
-                <a href="" target="_blank" rel="noopener noreferrer">Growing and Shrinking</a>
+                <a href="" target="_self" rel="noopener noreferrer">Growing and Shrinking</a>
             </li>
             <li>
-                <a href="" target="_blank" rel="noopener noreferrer">Axes</a>
+                <a href="" target="_self" rel="noopener noreferrer">Axes</a>
             </li>
             <li>
-                <a href="" target="_blank" rel="noopener noreferrer">Alignment</a>
+                <a href="" target="_self" rel="noopener noreferrer">Alignment</a>
             </li>
-        <a href="../index.html" target="_blank" rel="noopener noreferrer">Back to Review Homepage</a>
+        <a href="../index.html" target="_self" rel="noopener noreferrer">Back to Review Homepage</a>
     </body>
 </html>
 
