--- a/html/body-elements/body-elements.html
+++ b/html/body-elements/body-elements.html
@@ -20,8 +20,8 @@
     <p> &lt!-- --&gt creates hidden comments in the line not visible to users.
         <!-- Like so.-->
     <p> In order semantics (standards), from most to least important, goes as &ltstrong&gt, &ltem&gt, &lti&gt, and lastly &ltb&gt.</p>
-    <a href="../lists/lists.html">Next Lesson: Lists</a>
+    <a href="../lists/lists.html" target="_self" rel="noopener noreferrer">Next Lesson: Lists</a>
     <br>
-    <a href="../html.html">Back to HTML</a>
+    <a href="../html.html" target="_self" rel="noopener noreferrer">Back to HTML</a>
 </body>
 </html>
