--- a/html/lists/lists.html
+++ b/html/lists/lists.html
@@ -8,22 +8,41 @@
 </head>
 <body>
     <h1>Lists</h1>
-    <p> &ltul&gt creates unordered lists. Used for things like getting groceries, when order is not a neccessity.</p>
-        <p>Groceries<p>
-            <ul>
-                <li>Meat</li>
-                <li>Veggies</li>
-                <li>Pasta</li>
-            </ul>
-    <p> &ltol&gt creates ordered. Used for things like directions in a recipe.</p>
-        <p> Recipe
-            <ol>
-                <li>Preheat oven.</li>
-                <li>Wash veggies.</li>
-                <li>Line pan with veggies.</li>
-                <li>Once oven is preheated, place pan in oven. Bake for 30 minutes.</li>
-            </ol></p>
-    <p> &ltli&gt is used in both ordered and unordered lists to create listed items.</p>
+    <p>
+        &ltul&gt creates unordered lists. Used for things like getting groceries, when order is not a neccessity.
+    </p>
+    <ul>Groceries            
+        <li>
+            Meat
+        </li>
+        <li>
+            Veggies
+        </li>
+        <li>
+            Pasta
+        </li>
+    </ul>
+    <p>
+        &ltol&gt creates ordered. Used for things like directions in a recipe.
+    </p>
+    <ol>
+        Recipe
+            <li>
+                Preheat oven.
+            </li>
+            <li>
+                Wash veggies.
+            </li>
+            <li>
+                Line pan with veggies.
+            </li>
+            <li>
+                Once oven is preheated, place pan in oven. Bake for 30 minutes.
+            </li>
+    </ol>
+    <p>
+        &ltli&gt is used in both ordered and unordered lists to create listed items.
+    </p>
     <a href="../links-and-images/l-a-i.html">Next Lesson: Links and Images</a>
     <br>
     <a href="../html.html">Back to HTML</a>
