--- a/html/boilerplate/boilerplate.html
+++ b/html/boilerplate/boilerplate.html
@@ -7,15 +7,35 @@
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <h1>Boilerplate</h1>
-    <p> &lt!DOCTYPE&gt tags must be used to indicate HTML version.</p>
-    <p> &lthtml&gt tags indicate the start of the html document. Known as the root.</p>
-        <ul><li><p> "lang=en" attribute indicates language used for html document.</p></li></ul>
-            <p> &lthead&gt tags are used to provide instructions for the boilerplate.</p>
-    <p> &ltmeta charset="UTF-8"&gt sets encoding ensures special symbols and characters from different languages correctly in the browser.</p>
-    <p> &lttitle&gt provides the boilerplate context of the webpage with a title.</p>
-    <p> &ltbody&gt provides html document with content.</p>
-    <p> &lth1&gt provides a heading to the document. Ranges from h1 to h6, from biggest to smallest respectively.</p>
+    <h1>
+        Boilerplate
+    </h1>
+    <p>
+        &lt!DOCTYPE&gt tags must be used to indicate HTML version.
+    </p>
+    <p>
+        &lthtml&gt tags indicate the start of the html document. Known as the root.
+    </p>
+        <ul>
+            <li>
+                "lang=en" attribute indicates language used for html document.
+            </li>
+        </ul>
+    <p>
+        &lthead&gt tags are used to provide instructions for the boilerplate.
+    </p>
+    <p>
+        &ltmeta charset="UTF-8"&gt sets encoding ensures special symbols and characters from different languages correctly in the browser.
+    </p>
+    <p>
+        &lttitle&gt provides the boilerplate context of the webpage with a title.
+    </p>
+    <p>
+        &ltbody&gt provides html document with content.
+    </p>
+    <p>
+        &lth1&gt provides a heading to the document. Ranges from h1 to h6, from biggest to smallest respectively.
+    </p>
     <a href="../body-elements/body-elements.html" target="_self" rel="noopener noreferrer">Next Lesson: Body Elements</a>
     <br>
     <a href="../html.html" target="_self" rel="noopener noreferrer">Back to HTML</a>
