Fixedbe.htmlworkedonitf.html

--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -12,7 +12,7 @@
         </h1>
         <ul>
             <li>
-                <a href="" target="_self" rel="noopener noreferrer">Introduction to Flexbox</a>
+                <a href="./intro/i-t-f.html" target="_self" rel="noopener noreferrer">Introduction to Flexbox</a>
             </li>
             <li>
                 <a href="" target="_self" rel="noopener noreferrer">Growing and Shrinking</a>
