--- a/html/body-elements/body-elements.html
+++ b/html/body-elements/body-elements.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <h1>Body elements</h1>
+    <h1>
+        Body elements
+    </h1>
     <p>
         Create paragraph tags using &ltp&gt.
     </p>
@@ -15,7 +17,7 @@
         Use &ltstrong&gt To indicate words of importance, seriousness, and urgency without changing the meaning of the content.
         <ul>
             <li>
-                Except in emergencies, <strong>do not press the emergency button.</strong>
+                Except in emergencies,<strong>do not press the emergency button.</strong>
             </li>
         </ul>
     </p>
