--- a/css/css.html
+++ b/css/css.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1 class="cssh1">Notes on CSS</h1>
-        <ol>
+        <ol class="t-o-c">
             <li>
                 <a href="./intro-to-css/i-t-css.html" target="_self" rel="noopener noreferrer">Intro to CSS</a>
             </li>
