--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -10,7 +10,7 @@
         <h1 class="flexboxh1">
             Introduction to Flexbox
         </h1>
-        <ul>
+        <ol class="t-o-c">
             <li>
                 <a href="./intro/i-t-f.html" target="_self" rel="noopener noreferrer">Introduction to Flexbox</a>
             </li>
