--- a/html/html.html
+++ b/html/html.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 class="htmlh1">Notes on HTML</h1>
-    <ol>
+    <ol class="t-o-c">
         <li><a href="./boilerplate/boilerplate.html" target="_self" rel="noopener noreferrer">Boilerplate</a></li>
     
         <li><a href="./body-elements/body-elements.html" target="_self" rel="noopener noreferrer">Body Elements</a></li>
