--- a/html/lists/lists.html
+++ b/html/lists/lists.html
@@ -11,7 +11,8 @@
     <p>
         &ltul&gt creates unordered lists. Used for things like getting groceries, when order is not a neccessity.
     </p>
-    <ul>Groceries            
+    <ul>
+        Groceries            
         <li>
             Meat
         </li>
