--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Review Notes on The Odin Project Course</h1>
-        <ul class="hometopics">
+        <h1>
+            Review Notes on The Odin Project Course
+        </h1>
+        <ul class="hometopics t-o-c">
             <li>
                 <a href="./html/html.html" class="link" target="_self" rel="noopener noreferrer">HTML</a>
             </li>
