--- a/flexbox/intro/i-t-f.html
+++ b/flexbox/intro/i-t-f.html
@@ -30,7 +30,7 @@
                 Preview
             </h4>
             <p>
-                Note to self:<strong>Be patient</strong>. Everything previously learned is not any more difficult than what is 
+                Note to self: <strong class="itf-preview-strong">Be patient</strong>. Everything previously learned is not any more difficult than what is 
                 coming, but flexbox has more to it. The first few lessons will be difficult to utilize, but it will 
                 come together in the end. To understand them, play with the examples in  
                 <a href="https://www.theodinproject.com/lessons/foundations-introduction-to-flexbox" target="_blank" rel="noopener noreferrer" class="flexbox-intro-link">The Odin Project's: Introduction to Flexbox.</a>
